[package]
name = "pullup-counter"
version = "0.1.0"
authors = ["lalanza808 <lance@lzahq.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = {version = "0.4.4", features = ["tera_templates"]}
postgres = { version = "0.17.2", features = ["with-chrono-0_4"]}
chrono = "0.4.11"
